[package]
name = "wasm-runner"
version = "0.0.0"
publish = false
edition.workspace = true
license.workspace = true

[dependencies]
reth.workspace = true
reth-exex.workspace = true
reth-node-api.workspace = true
reth-node-ethereum.workspace = true
reth-tracing.workspace = true
reth-execution-types.workspace = true

eyre.workspace = true
futures.workspace = true
alloy-sol-types.workspace = true
alloy-consensus = "0.12.6"
alloy-primitives = "0.8.23"
wasmtime = "30.0.2"

[dev-dependencies]
reth-exex-test-utils.workspace = true
tokio.workspace = true
hex.workspace = true
